# warehouse-accounting

./: .gitignore  .rustfmt.toml  components.json  dispenser-activity-test.js  index.html  package.json  pnpm-lock.yaml  test-comm-status.js  test-dispenser-activity.js  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  XP-80  fuel_movements_2026-02-18_2026-02-18.xlsx  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/templates/: label.txt  receipt_58mm.txt  receipt_80mm.txt
src-tauri/capabilities/: default.json  desktop.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: cameras.rs  cards.rs  clients.rs  contract_cars.rs  contract_products.rs  contracts.rs  device_config.rs  discount_to_group.rs  discount_to_product.rs  discounts.rs  dispenser_ports.rs  dispensers.rs  fueling_order.rs  groups.rs  limits.rs  marks.rs  mod.rs  model_patch_device_config_label_template.md  nozzles.rs  order_item_discounts.rs  order_item_taxes.rs  order_item_to_contract_product.rs  order_items.rs  orders.rs  payments.rs  photos.rs  prelude.rs  prices.rs  products.rs  roles.rs  shifts.rs  tanks.rs  tax_to_product.rs  taxes.rs  units.rs  user_to_role.rs  users.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table_cameras.rs  m20220101_000002_create_table_cards.rs  m20220101_000003_create_table_limits.rs  m20220101_000004_create_table_clients.rs  m20220101_000006_create_table_contracts.rs  m20220101_000010_create_table_dispenser_ports.rs  m20220101_000011_create_table_dispensers.rs  m20220101_000013_create_table_marks.rs  m20220101_000014_create_table_nozzles.rs  m20220101_000016_create_table_orders.rs  m20220101_000019_create_table_products.rs  m20220101_000021_create_table_shifts.rs  m20220101_000024_create_table_tanks.rs  m20220101_000025_create_table_units.rs  m20220101_000027_create_table_users.rs  m20250125_091920_seed.rs  m20250209_000001_create_table_taxes.rs  m20250210_000001_create_device_config.rs  m20250908_000001_add_performance_indexes.rs  m20251021_000001_add_company_phone.rs  m20251024_000001_fix_discount_to_product_fk.rs  m20251024_000002_add_logo_path.rs  m20260115_000001_add_label_template.rs  m20260121_093646_add_proguct_image.rs  m20260130_000001_add_missing_performance_indexes.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: mod.rs  response.rs
src-tauri/src/adapters/dtos/: camera_dto.rs  client_dto.rs  contract_car_dto.rs  contract_dto.rs  contract_product_dto.rs  discount_dto.rs  dispenser_control_dto.rs  dispenser_dto.rs  dispenser_port_dto.rs  group_dto.rs  include_dto.rs  limit_dto.rs  mark_dto.rs  mod.rs  nozzle_dto.rs  order_dto.rs  order_item_dto.rs  payment_dto.rs  (+8 more)
src-tauri/src/domain/: repositories.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/shared/: barcode.rs  encryption.rs  error.rs  event.rs  macros.rs  mod.rs  types.rs
(+847 files in other folders)
