[package]
name = "sklad-uchot"
version = "0.1.15"
description = "TexnoUz GSMS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sklad_uchot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
migration = { path = "./migration" }
entity = { path = "./entity" }

directories = "6.0.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.13", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.47.1", features = ["time", "macros"] }
argon2 = { version = "0.5", features = ["password-hash"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
rust_decimal_macros = "1.37.1"
futures = "0.3.31"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
rand_core = "0.9.3"
password-hash = "0.5.0"
reqwest = { version = "0.12.21", features = [
    "json",
    "rustls-tls",
], default-features = false }
hostname = "0.4.0"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
regex = "1.10.2"


# OpenAPI/Swagger
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }

# Encryption and security
aes-gcm = "0.10"
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10.9"
rand = "0.9.2"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serialport = "4.7.2"
dotenvy = "0.15"
image = "0.25"
qrcode = "0.14"
encoding_rs = "0.8"
printpdf = "0.7"
tauri-plugin-single-instance = "2.0.0"
barcoders = { version = "2.0.0", features = ["image"] }
imageproc = "0.25"
ab_glyph = "0.2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
ts-rs = "11.0.1"
tracing-appender = "0.2"
